--- a/dishmap/src/main/res/layout/dialog_grap_table_result.xml
+++ b/dishmap/src/main/res/layout/dialog_grap_table_result.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black"
+    android:background="@drawable/white_bg_radius_5"
+    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
@@ -12,4 +13,10 @@
         android:text="结果"
         />
 
+    <Button
+        android:id="@+id/dialog_grap_table_confirm_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="确定"
+        />
 </LinearLayout>
