--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -23,6 +23,6 @@
     <color name="text_yellow">#FCFDA4</color>
     <color name="text_white_2">#FCFFFF</color>
     <color name="text_red_2">#B90020</color>
-
+    <color name="text_red_3">#89171B</color>
 
 </resources>
