--- a/dishmap/src/main/res/layout/activity_register.xml
+++ b/dishmap/src/main/res/layout/activity_register.xml
@@ -98,6 +98,17 @@
             android:textSize="@dimen/small_text_size"
             android:textColor="@color/text_dark_gray" />
 
+        <EditText
+            android:id="@+id/activity_register_name_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:hint="请输入姓名"
+            android:maxLength="20"
+            android:textColorHint="@color/text_hint_gray"
+            android:textSize="@dimen/normal_text_size" />
+
         <RelativeLayout
             android:layout_width="match_parent"
 
