--- a/dishmap/src/main/res/layout/activity_register.xml
+++ b/dishmap/src/main/res/layout/activity_register.xml
@@ -98,16 +98,35 @@
             android:textSize="@dimen/small_text_size"
             android:textColor="@color/text_dark_gray" />
 
-        <EditText
-            android:id="@+id/activity_register_name_et"
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:background="@null"
-            android:hint="请输入姓名"
-            android:maxLength="20"
-            android:textColorHint="@color/text_hint_gray"
-            android:textSize="@dimen/normal_text_size" />
+            android:layout_height="@dimen/y98"
+            android:layout_marginLeft="@dimen/x30"
+            android:layout_marginRight="@dimen/x21"
+            android:layout_marginTop="@dimen/y40"
+            android:background="@mipmap/input_name_bg">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y90">
+                <EditText
+                    android:id="@+id/activity_register_name_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/x50"
+                    android:layout_centerVertical="true"
+                    android:background="@null"
+                    android:hint="请输入姓名"
+                    android:maxLength="20"
+                    android:textColorHint="@color/text_hint_gray"
+                    android:textSize="@dimen/normal_text_size" />
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+
 
         <RelativeLayout
             android:layout_width="match_parent"
