--- a/dishmap/src/main/res/layout/dialog_grap_seat.xml
+++ b/dishmap/src/main/res/layout/dialog_grap_seat.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/white_bg_radius_5"
+    android:background="#00000000"
     android:gravity="center"
     android:orientation="vertical">
 
 
     <Button
         android:id="@+id/dialog_grap_seat_grap_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="抢" />
+        android:layout_width="@dimen/x300"
+        android:layout_height="@dimen/x300"
+        android:background="@mipmap/grab_dialog_btn_bg"
+        android:text="" />
 
 </LinearLayout>
