调试费抢的流程，修改图标

--- a/dishmap/src/main/res/layout/dialog_grap_seat.xml
+++ b/dishmap/src/main/res/layout/dialog_grap_seat.xml
@@ -12,6 +12,7 @@
         android:layout_width="@dimen/x300"
         android:layout_height="@dimen/x300"
         android:background="@mipmap/grab_dialog_btn_bg"
+        android:clickable="true"
         android:text="" />
 
 </LinearLayout>
