--- a/dishmap/src/main/res/layout/dialog_grap_table_loser.xml
+++ b/dishmap/src/main/res/layout/dialog_grap_table_loser.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/big_text_size"
                 android:textColor="@color/white"
+                android:visibility="invisible"
                 android:text="结果"
                 />
         </LinearLayout>
