--- a/dishmap/src/main/res/layout/boss_place_table_activity.xml
+++ b/dishmap/src/main/res/layout/boss_place_table_activity.xml
@@ -5,6 +5,12 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/title_layout"
+        layout="@layout/title_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y128"></include>
+
 
     <TextView
         android:layout_width="wrap_content"
