--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -118,8 +118,6 @@
                         android:textSize="17sp" />
 
 
-
-
                 </LinearLayout>
 
             </LinearLayout>
@@ -145,7 +143,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/btn_bg_red"
-                    android:onClick="closeDialog"
+                    android:onClick="doCall"
                     android:text="电话"
                     android:textColor="@android:color/white"
                     android:textSize="18sp" />
