--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -1,8 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#EFEFEF">
+
+    <RelativeLayout
+        android:id="@+id/activity_main_top_img_rel"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y700">
+
+        <ImageView
+            android:id="@+id/activity_main_bg_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/y3"
+            android:src="@mipmap/main_activity_bg"
+            android:scaleType="centerCrop" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/main_activity_btm_cycle"
+            android:layout_alignParentBottom="true"
+            />
+
+    </RelativeLayout>
 
 
 
+
+    <RelativeLayout
+        android:id="@+id/activity_main_btm_menu_rel"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y100"
+        android:layout_alignParentBottom="true"
+        android:background="#234345">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="我的"
+            />
+    </RelativeLayout>
 </RelativeLayout>
