--- a/dishmap/src/main/res/layout/fragment_user_main.xml
+++ b/dishmap/src/main/res/layout/fragment_user_main.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/activity_main_top_img_rel"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y700">
+
+        <ImageView
+            android:id="@+id/activity_main_bg_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/y3"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/main_activity_bg" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:src="@mipmap/main_activity_btm_cycle" />
+
+    </RelativeLayout>
 </LinearLayout>
