--- a/dishmap/src/main/res/layout/fragment_user_main.xml
+++ b/dishmap/src/main/res/layout/fragment_user_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -24,4 +24,15 @@
             android:src="@mipmap/main_activity_btm_cycle" />
 
     </RelativeLayout>
-</LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/activity_main_top_img_rel"
+        android:layout_marginTop="@dimen/y214"
+        android:textColor="@color/white"
+        android:text="开始扫码"/>
+
+
+</RelativeLayout>
