--- a/dishmap/src/main/res/layout/fragment_user_main.xml
+++ b/dishmap/src/main/res/layout/fragment_user_main.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/fragment_user_main_slide_down_iv"
+        android:layout_width="@dimen/x32"
+        android:layout_height="@dimen/y54"
+        android:src="@mipmap/slide_downward"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/y143"
+        />
+
     <RelativeLayout
         android:id="@+id/fragment_user_main_top_img_rel"
         android:layout_width="match_parent"
@@ -81,14 +91,7 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="@dimen/x32"
-        android:layout_height="@dimen/y54"
-        android:src="@mipmap/slide_downward"
-        android:layout_below="@+id/fragment_user_main_scan_items_ll"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/y84"
-        />
+
 
     <ImageView
         android:id="@+id/fragment_user_main_right_menu_iv"
