--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
             android:textColor="@color/white"
             android:layout_alignParentBottom="true"
             android:drawableTop="@mipmap/home_no_selet"
-            android:layout_marginLeft="@dimen/x82"
+            android:paddingLeft="@dimen/x82"
+            android:paddingRight="@dimen/x20"
             android:drawablePadding="@dimen/y8"
             android:textSize="@dimen/small_text_size"
             android:text="首页"
@@ -40,6 +41,8 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:drawablePadding="@dimen/y8"
+            android:paddingRight="@dimen/x20"
+            android:paddingLeft="@dimen/x20"
             android:drawableTop="@mipmap/coupon_no_select"
             android:textSize="@dimen/small_text_size"
             android:text="优惠券"
@@ -52,7 +55,8 @@
             android:textColor="@color/white"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginRight="@dimen/x82"
+            android:paddingRight="@dimen/x82"
+            android:paddingLeft="@dimen/x20"
             android:drawablePadding="@dimen/y8"
             android:drawableTop="@mipmap/mine_no_select_icon"
             android:textSize="@dimen/small_text_size"
