修改成沉浸式状态栏，做一些兼容性测试

--- a/dishmap/src/main/res/values/styles.xml
+++ b/dishmap/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <!-- Status Bar -->
         <item name="android:windowTranslucentStatus">true</item>
         <!-- Navigation Bar -->
-        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentNavigation">false</item>
     </style>
 
     <style name="DialogTheme" parent="android:style/Theme.Dialog">
