修改聊天页面

--- a/dishmap/src/main/res/layout/title_bar_layout.xml
+++ b/dishmap/src/main/res/layout/title_bar_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/title_bar_bg"
     android:layout_centerVertical="true">
 
         <RelativeLayout
@@ -24,7 +25,7 @@
                     android:id="@+id/title_text_tv"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="32dp"
-                    android:textColor="@color/title_text_color"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/text_size_15" />
 
                 <TextView
@@ -34,7 +35,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="32dp"
                     android:layout_centerInParent="true"
-                    android:textColor="@color/text_dark_gray"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/very_big_text_size" />
 
 
@@ -44,6 +45,7 @@
                     android:layout_height="@dimen/x60"
                     android:padding="@dimen/x15"
                     android:src="@mipmap/share"
+                    android:visibility="gone"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/x30"
                     android:layout_centerVertical="true"
@@ -60,6 +62,15 @@
                     android:layout_centerVertical="true"
                     />
 
+                <ImageView
+                    android:id="@+id/title_bar_right_iv"
+                    android:layout_width="@dimen/x50"
+                    android:layout_height="@dimen/x44"
+                    android:src="@mipmap/plus_icon"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/x30"
+                    android:layout_centerVertical="true"
+                    />
         </RelativeLayout>
         <TextView
             android:layout_width="match_parent"
